--- a/concepts/user-session.mdx
+++ b/concepts/user-session.mdx
@@ -1,7 +1,8 @@
 ---
 title: User Session
 ---
-`user_session` is a dictionary that stores the user's session data. The `id` and `env` keys are reserved for the session ID and environment variables, respectively. If you are using **langchain_factory**, the `agent` key will also be available. Other keys can be used to store arbitrary data in the user's session.
+
+`user_session` is a dictionary that stores the user's session data. The `id` and `env` keys are reserved for the session ID and environment variables, respectively. Other keys can be used to store arbitrary data in the user's session.
 
 `user_session` has two methods: `get` and `set`. The `get` method retrieves a value from the user's session. The `set` method sets a value in the user's session.
 
