--- a/concepts/streaming/langchain.mdx
+++ b/concepts/streaming/langchain.mdx
@@ -8,5 +8,6 @@ Chainlit supports LangChain's stream API natively. To use streaming just pass `s
 llm = OpenAI(temperature=0, streaming=True)
 ```
 
+Also make sure to pass a [callback handler](api-reference/langchain/callbacks) to your chain or agent run.
 
-
+See [here](api-reference/langchain/callbacks#final-answer-streaming) for final answer streaming.
