add on_message param

--- a/api-reference/on-message.mdx
+++ b/api-reference/on-message.mdx
@@ -11,6 +11,10 @@ The decorated function is called every time a new message is received.
   The message coming from the UI.
 </ParamField>
 
+<ParamField path="message_id" type="str">
+  The id of the message
+</ParamField>
+
 ### Usage
 
 ```python Code Example
