--- a/concepts/custom-theme.mdx
+++ b/concepts/custom-theme.mdx
@@ -12,6 +12,8 @@ Currently, you have the freedom to modify:
 
 <Note>If you started your Chainlit app with -w (file watcher), it will refresh every time you update the theme!</Note>
 
+<Warning>As of now, both themes have to be specified.</Warning>
+
 ## Light Theme Modification
 
 To modify the light theme, find or create the `[UI.theme.light]` section and update the colors as per your preference.
