update docs to 0.6.2

--- a/cloud/authentication/cloud.mdx
+++ b/cloud/authentication/cloud.mdx
@@ -1,10 +1,12 @@
 ---
-title: Add Authentication
+title: Cloud
 ---
 
 In order to ensure privacy and security, you may want to require users to authenticate before accessing your Chainlit application. This document guides you through the process of setting up user authentication for your Chainlit app.
+
 <Note>
-  If your project requires enterprise support, company authentication or admin panels, contact us here -> https://forms.gle/BX3UNBLmTF75KgZVA.
+  If your project requires enterprise support, company authentication or admin
+  panels, contact us here -> https://forms.gle/BX3UNBLmTF75KgZVA.
 </Note>
 
 ## Step 1: Create a Chainlit Project
