--- a/concepts/custom-endpoint.mdx
+++ b/concepts/custom-endpoint.mdx
@@ -1,5 +1,5 @@
 ---
-title: Custom API endpoints
+title: API endpoints
 ---
 
 Custom API endpoints allow you to extend Chainlit's Fast API backend with your own endpoints.
