--- a/concepts/custom-theme.mdx
+++ b/concepts/custom-theme.mdx
@@ -1,5 +1,5 @@
 ---
-title: Theme Customization
+title: Theme
 ---
 
 Looking to refresh your app's appearance? You can easily alter the default theme colors in your `config.toml` file.
@@ -10,9 +10,10 @@ Currently, you have the freedom to modify:
 - **Paper color**: This alters the color of the 'paper' elements within the app, such as the navbar, widgets, etc.
 - **Primary color**: This encompasses three shades - main, dark, and light. These colors are primarily used for interactive interface elements.
 
-<Note>If you started your Chainlit app with -w (file watcher), it will refresh every time you update the theme!</Note>
-
-<Warning>As of now, both themes have to be specified.</Warning>
+<Note>
+  If you started your Chainlit app with -w (file watcher), it will refresh every
+  time you update the theme!
+</Note>
 
 ## Light Theme Modification
 
