update callback imports

--- a/api-reference/author-rename.mdx
+++ b/api-reference/author-rename.mdx
@@ -21,6 +21,7 @@ Useful to rename the author of a message to display more friendly author names i
 ```python Code Example
 from langchain import OpenAI, LLMMathChain
 import chainlit as cl
+from chainlit.langchain.callbacks import AsyncLangchainCallbackHandler
 
 
 @cl.author_rename
@@ -33,7 +34,7 @@ def rename(orig_author: str):
 async def main(message: str):
     llm = OpenAI(temperature=0)
     llm_math = LLMMathChain.from_llm(llm=llm)
-    res = await llm_math.acall(message, callbacks=[cl.AsyncLangchainCallbackHandler()])
+    res = await llm_math.acall(message, callbacks=[AsyncLangchainCallbackHandler()])
 
     await cl.Message(content="Hello").send()
 ```
