--- a/integrations/langflow.mdx
+++ b/integrations/langflow.mdx
@@ -54,8 +54,9 @@ import json
 
 from langchain.agents import AgentExecutor
 
-from chainlit.langflow import load_flow
 import chainlit as cl
+from chainlit.langflow import load_flow
+from chainlit.langchain.callbacks import LangchainCallbackHandler
 
 
 with open("./schema.json", "r") as f:
@@ -78,7 +79,7 @@ async def main(message):
 
     # Run the flow
     res = await cl.make_async(flow.run)(
-        message, callbacks=[cl.LangchainCallbackHandler()]
+        message, callbacks=[LangchainCallbackHandler()]
     )
 
     # Send the response
