--- a/concepts/chat-settings.mdx
+++ b/concepts/chat-settings.mdx
@@ -16,4 +16,9 @@ If chat settings are set, a new button will appear in the chat bar.
 
 Clicking on this button will open the settings panel. All settings are editable by the user. Once settings are updated, an event is sent to the Chainlit server so the application can react to the update.
 
-![Playground](/images/chat-settings.png)
+<Frame caption="Chat Settings in Chainlit">
+  <img src="/images/chat-settings.png" />
+</Frame>
+
+## Example
+Check out this example from the cookbook that uses this feature: https://github.com/Chainlit/cookbook/tree/main/image-gen
