--- a/api-reference/input-widgets/textinput.mdx
+++ b/api-reference/input-widgets/textinput.mdx
@@ -32,7 +32,7 @@ title: "TextInput"
 
 ```python Code Example
 import chainlit as cl
-from chainlit.input_widget import Tags
+from chainlit.input_widget import TextInput
 
 
 @cl.on_chat_start
