--- a/cloud/persistence/custom.mdx
+++ b/cloud/persistence/custom.mdx
@@ -56,7 +56,7 @@ from chainlit.client.base import (
 )
 
 
-class CustomClient(BaseDBClient):
+class CustomDBClient(BaseDBClient):
     async def create_user(self, variables: UserDict) -> bool:
         raise NotImplementedError
 
@@ -105,8 +105,8 @@ class CustomClient(BaseDBClient):
 
 
 @cl.db_client_factory
-async def db_client_factory(user_infos):
-    return CustomClient()
+async def db_client_factory(handshake_headers, request_headers, user_infos):
+    return CustomDBClient()
 
 
 @cl.on_chat_start
